@@ -1,0 +1,10 @@
+Name: MC_GENERIC
+Summary: Generic MC testing analysis
+Status: UNVALIDATED
+Authors:
+ - Ian Bruce <ibruce@cern.ch>
+ - Andy Buckley <andy.buckley@cern.ch>
+NumEvents: 50000
+# Beams: [*, *]
+Description:
+  Generic analysis of typical event distributions such as $\eta$, $y$, $pT$, $\phi$...
