@@ -1,0 +1,119 @@
+# BEGIN PLOT /MC_GENERIC/ECh
+Title=Energy of charged particles
+XLabel=$E$ [GeV]
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}E$ [GeV$^{-1}$]
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/E
+Title=Energy of all particles
+XLabel=$E$ [GeV]
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}E$ [GeV$^{-1}$]
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/EtaCh
+Title=Pseudorapidity of charged particles
+XLabel=$\eta$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\eta$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/EtaChPMRatio
+Title=Pseudorapidity $+/-$ ratio of charged particles
+XLabel=$|\eta|$
+YLabel=$\mathrm{d}\sigma/\mathrm{d}\eta_+ \; / \; \mathrm{d}\sigma/\mathrm{d}\eta_-$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/Eta
+Title=Pseudorapidity of all particles
+XLabel=$\eta$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\eta$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/EtaPMRatio
+Title=Pseudorapidity $+/-$ ratio of all particles
+XLabel=$|\eta|$
+YLabel=$\mathrm{d}\sigma/\mathrm{d}\eta_+ \; / \; \mathrm{d}\sigma/\mathrm{d}\eta_-$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/MultCh
+Title=Charged multiplicity of events
+XLabel=$N_text{ch}$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}N_\text{ch}$
+LogY=0
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/Mult
+Title=Total multiplicity of events
+XLabel=$N$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}N$
+LogY=0
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/PhiCh
+Title=Azimuthal distribution of charged particles
+XLabel=$\phi$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\phi$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/Phi
+Title=Azimuthal distribution of all particles
+XLabel=$\phi$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}\phi$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/PtCh
+Title=Transverse momentum of charged particles
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^{-1}$]
+FullRange=1
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/Pt
+Title=Transverse momentum of all particles
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}p_\perp$ [GeV$^{-1}$]
+FullRange=1
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/RapidityCh
+Title=Rapidity of charged particles
+XLabel=$y$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}y$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/RapidityChPMRatio
+Title=Rapidity $+/-$ ratio of charged particles
+XLabel=$|y|$
+YLabel=$\mathrm{d}\sigma/\mathrm{d}y_+ \; / \; \mathrm{d}\sigma/\mathrm{d}y_-$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/Rapidity
+Title=Rapidity of all particles
+XLabel=$y$
+YLabel=$1/\sigma \; \mathrm{d}\sigma/\mathrm{d}y$
+LogY=0
+LegendYPos=0.5
+# END PLOT
+
+# BEGIN PLOT /MC_GENERIC/RapidityPMRatio
+Title=Rapidity $+/-$ ratio of all particles
+XLabel=$|y|$
+YLabel=$\mathrm{d}\sigma/\mathrm{d}y_+ \; / \; \mathrm{d}\sigma/\mathrm{d}y_-$
+LogY=0
+LegendYPos=0.5
+# END PLOT
